tests/NormalTests/paczka1/fuzzy1/48714119.err
Error in line 2: bkTZU S655 58,8
Error in line 3: S723 S776 26,5
Error in line 6: tVE S723 47,0
Error in line 8: MeSsGv6 S378 98,5
Error in line 12: ctG S776 17,9
Error in line 23: ?S37ã
Error in line 24: bkTZU S378 69,3
